# PoleRisk

./: .dockerignore  .env.weather  .gitignore  .readthedocs.yaml  AUTOMATION_SETUP.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  api_server.py  dashboard_app.py  docker-compose.yml  main.py  nginx.conf  pole_assessment.db  production_assessment.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-performance.txt  requirements.txt  setup.cfg  setup.py
.internal/: ARCHITECTURE.md  BLESSED_INTERFACES.md  CASE_STUDY.md  DEPLOYMENT.md  IMPROVEMENTS_SUMMARY.md  NUMBA_INTEGRATION_COMPLETE.md  PERFORMANCE.md  PRODUCTION_ROADMAP.md  README.md  README_BUSINESS.md  README_ENHANCED.md  REPO_MAP.md  STRATEGIC_SUMMARY.md  TODOS_COMPLETED_SUMMARY.md
Analysis/: pole_health_map.html  soil_moisture_dashboard.html  soil_moisture_data.csv
Input/: LPRM-AMSR2_L3_D_SOILM3_V001_20150401013507.nc4  sample_poles.csv  sample_soil_data.csv  sample_structural_inspections.csv
Output/: maintenance_report.txt  maintenance_schedule.csv  match_results.txt  pole_health_assessment.csv  weather_enhanced_assessment.csv
docs/: WIP_INTEGRATION_SUMMARY.md  anomaly_detection_integration.md  library_integration.md  make.bat  rust_integration.md  statistical_functions.md
examples/: README.md  anomaly_detection_example.py  benchmark_numba_acceleration.py  benchmark_rust_vs_python.py  demo_ml.py  ensemble_forecasting_example.py  failure_mode_analysis.py  inspection_realism_demo.py  ts2net_integration_example.py  ts2net_pole_analysis.py  visualize_pole_health.py
polerisk/: __init__.py  core.py
polerisk_rs/: Cargo.toml
scripts/: README.md  install-hooks.sh  launch_dashboard.py  launch_web_app.py  (+1 more)
soilmoisture_rs/: Cargo.toml
soilmoisture_rs/src/: lib.rs
(+154 files in other folders)
