[metadata]
description-file = README.md
license_files = LICENSE

[pycodestyle]
max-line-length = 88
exclude = .git,__pycache__,.tox,docs,build,dist

[flake8]
max-line-length = 88
exclude = .git,__pycache__,.tox,docs,build,dist
per-file-ignores =
    # Allow unused imports in __init__.py
    __init__.py: F401

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[tool:pytest]
testpaths = tests
addopts = -v --cov=polerisk --cov-report=term-missing
markers =
    performance: marks tests as performance tests (deselect with '-m "not performance"')

[coverage:run]
source =
    polerisk
omit =
    */tests/*
    */__init__.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

[egg_info]
tag_build =
tag_date = 0
