[package]
name = "soilmoisture_rs"
version = "0.1.0"
edition = "2021"
authors = ["K. Jones <kyletjones@gmail.com>"]
description = "High-performance soil moisture analysis in Rust"
license = "MIT"

[lib]
name = "soilmoisture_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"
rayon = "1.8"

[dev-dependencies]
approx = "0.5"

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
